Issue #24 - CSS test on openshift

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -88,4 +88,7 @@ footer .widget {
   vertical-align: baseline;
 }
 
+p {
+  background-image: url('logo.png');
+}
 
